--- a/views/index.html
+++ b/views/index.html
@@ -11,22 +11,6 @@
   </head>
   <body>
     <div id="content">
-      <!-- <div class="container credentials">
-        <div class="well well-sm">
-          <form class="form-horizontal">
-            <fieldset>
-              <legend>Enter in your credentials</legend>
-              <div class="form-group">
-                <input type="text" class="form-control" id="name" placeholder="Your callsign">
-              </div>
-              <div class="text-right">
-                <button class="btn btn-primary" type="submit">Enter <i class="fa fa-sign-in"></i></button>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div> -->
-
       <div class="container poker">
         <div class="row">
           <div class="col-xs-9">
@@ -84,9 +68,14 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript">
+      var App = {};
+    </script>
+    <script src="js/vendor/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <script src="js/views/login.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
