--- a/views/index.html
+++ b/views/index.html
@@ -10,72 +10,22 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div id="content">
-      <div class="container poker">
-        <div class="row">
-          <div class="col-xs-9">
-            <input type="text" class="form-control" id="title" placeholder="Task title">
-
-            <div class="playing-cards">
-              <a href="javascript:void(0);" class="card"><span class="number">0</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">.5</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">1</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">2</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">3</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">5</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">8</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">13</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">20</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">40</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">100</span></a>
-              <a href="javascript:void(0);" class="card"><span class="number">?</span></a>
-            </div>
-          </div>
-
-          <div class="col-xs-3 attendees">
-            <p class="h2">Awesome People</p>
-            <ul class="list-group">
-              <li class="list-group-item observer">
-                <span class="pull-right"><i class="fa fa-eye"></i></span>
-                <span class="name">Person</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">Person</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">Person</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">Person</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">A very long persons name because WOW</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">Person</span>
-              </li>
-              <li class="list-group-item voter">
-                <span class="pull-right"><i class="fa fa-check"></i></span>
-                <span class="name">Person</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="content"></div>
     <script type="text/javascript">
       var App = {};
     </script>
     <script src="js/vendor/socket.io.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/jquery.cookie.js"></script>
+    <script src="js/vendor/underscore-min.js"></script>
+    <script src="js/vendor/backbone-min.js"></script>
+    <script src="js/vendor/backbone.stickit.js"></script>
+    <script src="js/models/story.js"></script>
+    <script src="js/models/user.js"></script>
+    <script src="js/collections/users.js"></script>
     <script src="js/views/login.js"></script>
+    <script src="js/views/attendees.js"></script>
+    <script src="js/views/poker.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
