--- a/public/css/app.css
+++ b/public/css/app.css
@@ -100,7 +100,7 @@ html, body {
       }
 
 /* Attendees */
-.attendees .h2 {
+.attendees .h2, .stats .h2 {
   font-size: 24px;
   text-transform: uppercase;
   margin-top: 0;
