Better styling of stats table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -125,3 +125,12 @@ html, body {
 .attendees li .fa.fa-voter::before {
   content: "\f007";
 }
+
+/* Stats */
+.stats tr {
+  background-color: #fff;
+}
+
+.stats th {
+  background-color: #eee;
+}
